--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <hr>
     <label for="select-breed">Filter Breeds That Start with:</label>
-    <select id="breed-dropdown" name="select-breed" onchange="getval">
+    <select id="breed-dropdown" name="select-breed">
      <option value="all">all</option>
       <option value="a">a</option>
       <option value="b">b</option>
